--- a/package.json
+++ b/package.json
@@ -8,8 +8,12 @@
     "start": "node build/server.js",
     "start:dev": "tsx watch src/server.ts",
     "build": "tsup src --out-dir build",
-    "test": "vitest run",
-    "test:watch": "vitest",
+    "test": "vitest run --dir src/use-cases",
+    "test:watch": "vitest --dir src/use-cases",
+    "test:create-prisma-environment": "npm link ./prisma/vitest-environment-prisma",
+    "test:install-prisma-environment": "npm link vitest-environment-prisma",
+    "pretest:e2e": "run-s test:create-prisma-environment test:install-prisma-environment",
+    "test:e2e": "vitest run --dir src/http",
     "test:coverage": "vitest --coverage"
   },
   "keywords": [],
@@ -30,7 +34,9 @@
     "@types/node": "22.9.0",
     "@vitest/coverage-v8": "2.1.5",
     "eslint": "8.57.1",
+    "npm-run-all": "4.1.5",
     "prisma": "5.22.0",
+    "supertest": "7.0.0",
     "tsup": "8.3.5",
     "tsx": "4.19.2",
     "typescript": "5.6.3",
