--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "test:install-prisma-environment": "npm link vitest-environment-prisma",
     "pretest:e2e": "run-s test:create-prisma-environment test:install-prisma-environment",
     "test:e2e": "vitest run --dir src/http",
+    "test:e2e:watch": "vitest --dir src/http",
     "test:coverage": "vitest --coverage"
   },
   "keywords": [],
@@ -32,6 +33,7 @@
     "@rocketseat/eslint-config": "2.2.2",
     "@types/bcryptjs": "2.4.6",
     "@types/node": "22.9.0",
+    "@types/supertest": "6.0.2",
     "@vitest/coverage-v8": "2.1.5",
     "eslint": "8.57.1",
     "npm-run-all": "4.1.5",
@@ -42,5 +44,6 @@
     "typescript": "5.6.3",
     "vite-tsconfig-paths": "5.1.3",
     "vitest": "2.1.5"
-  }
+  },
+  "packageManager": "pnpm@9.12.2+sha512.22721b3a11f81661ae1ec68ce1a7b879425a1ca5b991c975b074ac220b187ce56c708fe5db69f4c962c989452eee76c82877f4ee80f474cebd61ee13461b6228"
 }
